--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   # 2. 네이버 지도 웹 전용 라이브러리
   flutter_naver_map_web: ^0.0.1  # 보내주신 최신 패키지 버전
 
+  # 3. 스크롤 애니메이션용 뷰포트 감지
+  visibility_detector: ^0.4.0+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
