--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   # 3. 스크롤 애니메이션용 뷰포트 감지
   visibility_detector: ^0.4.0+2
 
+  firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.1
+  crypto: ^3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
